@@ -12,6 +12,8 @@
 
     * las/arch/x86_64/main.c: Added the IN instruction
 
+    * las/arch/x86_64/main.c: Added the INC instruction
+
 
 2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>
 
